--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,16 @@
 			<h1>ROAM EU</h1>
 		</div>
 		<div class="nav-bar">
-			<a href="../index.html">Home</a>
-			<a href="../index.html">About</a>
+			<a href="./index.html">Home</a>
+			<a href="./index.html">About</a>
 			<a class="drop-down"
 				onclick="document.getElementById('country-list').classList.toggle('show')">Countries</a>
 			<ul id="country-list" class="dropdown-menu">
-				<li><a href="../countries/france.html">France</a></li>
-				<li><a href="../countries/italy.html">Italy</a></li>
-				<li><a href="../countries/spain.html">Spain</a></li>
-				<li><a href="../countries/portugal.html">Portugal</a></li>
-				<li><a href="../countries/germany.html">Germany</a></li>
+				<li><a href="./countries/france.html">France</a></li>
+				<li><a href="./countries/italy.html">Italy</a></li>
+				<li><a href="./countries/spain.html">Spain</a></li>
+				<li><a href="./countries/portugal.html">Portugal</a></li>
+				<li><a href="./countries/germany.html">Germany</a></li>
 			</ul>
 			<a href="../contact.html">Contact</a>
 		</div>
