deleting stupid extra dots

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 				<li><a href="./countries/portugal.html">Portugal</a></li>
 				<li><a href="./countries/germany.html">Germany</a></li>
 			</ul>
-			<a href="../contact.html">Contact</a>
+			<a href="./contact.html">Contact</a>
 		</div>
 	</header>
   <body>
