remove country uppercasing in dropdown (to match other pages) + fix germany link in carousel

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </button>
         <!-- Dropdown menu containing list of European countries -->
         <ul class="dropdown-menu">
-          <li><a href="./countries/france.html">FRANCE</a></li>
-          <li><a href="./countries/italy.html">ITALY</a></li>
-          <li><a href="./countries/spain.html">SPAIN</a></li>
-          <li><a href="./countries/portugal.html">PORTUGAL</a></li>
-          <li><a href="./countries/germany.html">GERMANY</a></li>
+          <li><a href="./countries/france.html">France</a></li>
+          <li><a href="./countries/italy.html">Italy</a></li>
+          <li><a href="./countries/spain.html">Spain</a></li>
+          <li><a href="./countries/portugal.html">Portugal</a></li>
+          <li><a href="./countries/germany.html">Germany</a></li>
         </ul>
         <!-- Contact page link -->
         <a href="contact.html">Contact</a>
@@ -130,7 +130,7 @@
             <h3>Portugal</h3>
           </a>
           <!-- Germany destination card -->
-          <a href="./countries/Germany.html" class="item">
+          <a href="./countries/germany.html" class="item">
             <img
               src="./img/julia-solonina-5NnK3nJ44g8-unsplash.jpg"
               alt="Germany"
