rename country assets + remove keep_params.js

--- a/countries/germany.html
+++ b/countries/germany.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Germany</title>
-    <script src="../js/keep-params.js"></script>
     <link rel="stylesheet" href="../css/countries.css" />
     <link rel="stylesheet" href="../css/shared.css" />
   </head>
@@ -52,7 +51,7 @@
         <article class="main-div-inner">
           <!-- The flag of the country as an SVG, taken from Wikipedia -->
           <img
-            src="../SVGs/germany_flag.svg"
+            src="../SVGs/flags/germany.svg"
             class="flag"
             alt="Flag of Germany"
           />
