--- a/countries/france.html
+++ b/countries/france.html
@@ -1,132 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>France</title>
+    <link rel="stylesheet" href="../css/countries.css" />
+    <link rel="stylesheet" href="../css/shared.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>France</title>
-	<script src="../js/keep-params.js"></script>
-	<link rel="stylesheet" href="../css/countries.css" />
-	<link rel="stylesheet" href="../css/shared.css" />
-</head>
+  <body>
+    <!-- The Background image for the site -->
+    <div
+      style="
+        background-image: url(../img/france/background.webp);
+        background-color: #60818e;
+      "
+      class="background-div"
+    ></div>
 
-<body>
-	<!-- The Background image for the site -->
-	<div style="background-image: url(../img/france/background.webp); background-color: #60818e;"
-		class="background-div"></div>
+    <!-- The Header at the top of the site -->
+    <header>
+      <div class="name-h">
+        <h1>ROAM EU</h1>
+      </div>
+      <div class="nav-bar">
+        <a href="../index.html">Home</a>
+        <a href="../index.html">About</a>
+        <a
+          class="drop-down"
+          onclick="document.getElementById('country-list').classList.toggle('show')"
+          >Countries</a
+        >
+        <ul id="country-list" class="dropdown-menu">
+          <li><a href="../countries/france.html">France</a></li>
+          <li><a href="../countries/italy.html">Italy</a></li>
+          <li><a href="../countries/spain.html">Spain</a></li>
+          <li><a href="../countries/portugal.html">Portugal</a></li>
+          <li><a href="../countries/germany.html">Germany</a></li>
+        </ul>
+        <a href="../contact.html">Contact</a>
+      </div>
+    </header>
 
-	<!-- The Header at the top of the site -->
-	<header>
-		<div class="name-h">
-			<h1>ROAM EU</h1>
-		</div>
-		<div class="nav-bar">
-			<a href="../index.html">Home</a>
-			<a href="../index.html">About</a>
-			<a class="drop-down"
-				onclick="document.getElementById('country-list').classList.toggle('show')">Countries</a>
-			<ul id="country-list" class="dropdown-menu">
-				<li><a href="../countries/france.html">France</a></li>
-				<li><a href="../countries/italy.html">Italy</a></li>
-				<li><a href="../countries/spain.html">Spain</a></li>
-				<li><a href="../countries/portugal.html">Portugal</a></li>
-				<li><a href="../countries/germany.html">Germany</a></li>
-			</ul>
-			<a href="../contact.html">Contact</a>
-		</div>
-	</header>
+    <!-- The main grid layout split into 4 columns, with content on the middle two columns. -->
+    <div class="grid-div">
+      <div></div>
 
-	<!-- The main grid layout split into 4 columns, with content on the middle two columns. -->
-	<div class="grid-div">
-		<div></div>
+      <!-- Left content column containing the main part of the text -->
+      <div class="main-div-outer">
+        <article class="main-div-inner">
+          <!-- The flag of the country as an SVG, take from Wikipedia -->
+          <svg
+            class="flag"
+            aria-label="Flag of France"
+            xmlns="http://www.w3.org/2000/svg"
+            width="15rem"
+            height="10rem"
+          >
+            <rect width="15rem" height="10rem" fill="#CE1126" />
+            <rect width="10rem" height="10rem" fill="#FFFFFF" />
+            <rect width="5rem" height="10rem" fill="#002654" />
+          </svg>
+          <!-- the National Anthem taken from Wikipedia -->
+          <audio
+            aria-label="La Marseillaise - National Anthem of France"
+            controls
+          >
+            <source src="../audio/la_marseillaise.ogg" />
+            Your browser does not support the audio element.
+          </audio>
 
-		<!-- Left content column containing the main part of the text -->
-		<div class="main-div-outer">
-			<article class="main-div-inner">
-				<!-- The flag of the country as an SVG, take from Wikipedia -->
-				<svg class="flag" aria-label="Flag of France" xmlns="http://www.w3.org/2000/svg" width="15rem"
-					height="10rem">
-					<rect width="15rem" height="10rem" fill="#CE1126" />
-					<rect width="10rem" height="10rem" fill="#FFFFFF" />
-					<rect width="5rem" height="10rem" fill="#002654" />
-				</svg>
-				<!-- the National Anthem taken from Wikipedia -->
-				<audio aria-label="La Marseillaise, the National Anthem of France" controls>
-					<source src="../audio/La_Marseillaise.ogg"> Your browser does not support the audio element.
-				</audio>
+          <!-- Here begins the primary text content -->
+          <h1>Summary</h1>
+          <p>
+            France is one of the world's most visited countries, famous for its
+            rich history, art, cuisine, fashion, and landscapes. From the
+            romance of Paris to the vineyards of Bordeaux, the beaches of the
+            French Riviera, and the Alpine peaks, France offers a mix of
+            culture, relaxation, and adventure. The capital of France is Paris
+            and the spoken language is French, however English is also widely
+            spoken in tourist areas. The best time to visit is during
+            summer/autumn when the weather is pleasant with fewer crowds.
+          </p>
+          <!-- To break up the text a bit, we include a map of the country -->
+          <img
+            src="../img/france/map.webp"
+            style="background-color: #cad5ca"
+            width="600px"
+            height="583px"
+            class="large-image"
+            alt="Map of France"
+          />
+          <h1>Getting around</h1>
+          <h2>Transport</h2>
+          <p>
+            France has an excellent transportation network, making it easy to
+            move between cities and regions. High-speed TGV trains connect major
+            hubs quickly and comfortably, while regional trains and buses reach
+            smaller towns. In cities, public transit is reliable, Paris offers
+            an extensive metro, RER, buses, and trams. For rural areas like
+            Provence or the Loire Valley, renting a car gives the most
+            flexibility. Domestic flights are available but often unnecessary
+            thanks to efficient rail service.
+          </p>
+          <h2>Safety</h2>
+          <p>
+            France is generally safe for travelers. Petty theft, especially in
+            crowded areas, train stations, and major attractions—can happen, so
+            keep valuables secure and stay aware of your surroundings. At night,
+            well-lit central areas are safe to navigate, though it’s wise to
+            avoid isolated spots. Follow local guidance during demonstrations or
+            strikes, which occur occasionally and may affect transport
+            schedules.
+          </p>
+        </article>
+      </div>
 
-				<!-- Here begins the primary text content -->
-				<h1>Summary</h1>
-				<p>
-					France is one of the world's most visited countries, famous for its
-					rich history, art, cuisine, fashion, and landscapes. From the
-					romance of Paris to the vineyards of Bordeaux, the beaches of the
-					French Riviera, and the Alpine peaks, France offers a mix of
-					culture, relaxation, and adventure. The capital of France is Paris
-					and the spoken language is French, however English is also widely
-					spoken in tourist areas. The best time to visit is during
-					summer/autumn when the weather is pleasant with fewer crowds.
-				</p>
-				<!-- To break up the text a bit, we include a map of the country -->
-				<img src="../img/france/map.webp" style="background-color: #cad5ca;" width="600px" height="583px"
-					class="large-image" alt="Map of France">
-				<h1>Getting around</h1>
-				<h2>Transport</h2>
-				<p>
-					France has an excellent transportation network, making it easy to move between cities and
-					regions. High-speed TGV trains connect major hubs quickly and comfortably, while regional trains and
-					buses reach smaller towns. In cities, public transit is reliable, Paris offers an extensive metro,
-					RER, buses, and trams. For rural areas like Provence or the Loire Valley, renting a car gives the
-					most flexibility. Domestic flights are available but often unnecessary thanks to efficient rail
-					service.
-				</p>
-				<h2>Safety</h2>
-				<p>
-					France is generally safe for travelers. Petty theft, especially in crowded areas, train
-					stations, and major attractions—can happen, so keep valuables secure and stay aware of your
-					surroundings. At night, well-lit central areas are safe to navigate, though it’s wise to avoid
-					isolated spots. Follow local guidance during demonstrations or strikes, which occur occasionally and
-					may affect transport schedules.
-				</p>
-			</article>
-		</div>
+      <!-- The right column of content containing the top 5 things to do -->
+      <div class="main-div-outer">
+        <article class="main-div-inner">
+          <h1>Top 5 Things to Do</h1>
+          <ol>
+            <li>
+              <p class="list-text">Explore Paris - The City of Light</p>
+              <img
+                src="../img/france/paris.webp"
+                style="background-color: #e8f0e4"
+                class="list-image"
+                alt="Image of Paris"
+              />
+            </li>
+            <li>
+              <p class="list-text">Visit the French Riviera (Côte d'Azur)</p>
+              <img
+                src="../img/france/riviera.webp"
+                style="background-color: #0272b5"
+                class="list-image"
+                alt="Image of the French Riviera"
+              />
+            </li>
+            <li>
+              <p class="list-text">Discover the Loire Valley Châteaux</p>
+              <img
+                src="../img/france/loire_valley.webp"
+                style="background-color: #87937d"
+                class="list-image"
+                alt="Image of a Châteaux of the Loire Valley"
+              />
+            </li>
+            <li>
+              <p class="list-text">Tour the Wine Regions</p>
+              <img
+                src="../img/france/wine_regions.webp"
+                style="background-color: #a3b133"
+                class="list-image"
+                alt="Image of the Wine Regions"
+              />
+            </li>
+            <li>
+              <p class="list-text">Experience Provence</p>
+              <img
+                src="../img/france/provence.webp"
+                style="background-color: #6c6479"
+                class="list-image"
+                alt="Image of Provence"
+              />
+            </li>
+          </ol>
+        </article>
+      </div>
 
-		<!-- The right column of content containing the top 5 things to do -->
-		<div class="main-div-outer">
-			<article class="main-div-inner">
-				<h1>Top 5 Things to Do</h1>
-				<ol>
-					<li>
-						<p class="list-text">Explore Paris - The City of Light</p>
-						<img src="../img/france/paris.webp" style="background-color: #e8f0e4;" class="list-image"
-							alt="Image of Paris">
-					</li>
-					<li>
-						<p class="list-text">Visit the French Riviera (Côte d'Azur)</p>
-						<img src="../img/france/riviera.webp" style="background-color: #0272b5;" class="list-image"
-							alt="Image of the French Riviera">
-					</li>
-					<li>
-						<p class="list-text">Discover the Loire Valley Châteaux</p>
-						<img src="../img/france/loire_valley.webp" style="background-color: #87937d;" class="list-image"
-							alt="Image of a Châteaux of the Loire Valley">
-					</li>
-					<li>
-						<p class="list-text">Tour the Wine Regions</p>
-						<img src="../img/france/wine_regions.webp" style="background-color: #a3b133;" class="list-image"
-							alt="Image of the Wine Regions">
-					</li>
-					<li>
-						<p class="list-text">Experience Provence</p>
-						<img src="../img/france/provence.webp" style="background-color: #6c6479;" class="list-image"
-							alt="Image of Provence">
-					</li>
-				</ol>
-			</article>
-		</div>
-
-		<div></div>
-	</div>
-</body>
-
+      <div></div>
+    </div>
+  </body>
 </html>
