rename destination cards + rename dropdown script

--- a/index.html
+++ b/index.html
@@ -99,42 +99,27 @@
         <div class="container">
           <!-- France destination card -->
           <a href="./countries/france.html" class="item">
-            <img
-              src="./img/premium_photo-1719430569503-338fc89eb21f.avif"
-              alt="France"
-            />
+            <img src="./img/cards/france.avif" alt="France" />
             <h3>France</h3>
           </a>
           <!-- Italy destination card -->
           <a href="./countries/italy.html" class="item">
-            <img
-              src="./img/spencer-davis-ckotRXopwRM-unsplash.jpg"
-              alt="Italy"
-            />
+            <img src="./img/cards/italy.jpg" alt="Italy" />
             <h3>Italy</h3>
           </a>
           <!-- Spain destination card -->
           <a href="./countries/spain.html" class="item">
-            <img
-              src="./img/robin-ulrich-Dnfl3fIjjtk-unsplash.jpg"
-              alt="Spain"
-            />
+            <img src="./img/cards/spain.jpg" alt="Spain" />
             <h3>Spain</h3>
           </a>
           <!-- Portugal destination card -->
           <a href="./countries/portugal.html" class="item">
-            <img
-              src="./img/ekaterina-boltaga-jqkGK3ofxi8-unsplash.jpg"
-              alt="Portugal"
-            />
+            <img src="./img/cards/portugal.jpg" alt="Portugal" />
             <h3>Portugal</h3>
           </a>
           <!-- Germany destination card -->
           <a href="./countries/germany.html" class="item">
-            <img
-              src="./img/julia-solonina-5NnK3nJ44g8-unsplash.jpg"
-              alt="Germany"
-            />
+            <img src="./img/cards/germany.jpg" alt="Germany" />
             <h3>Germany</h3>
           </a>
         </div>
@@ -176,6 +161,6 @@
     </footer>
 
     <!-- JavaScript file for interactive features like dropdown menu functionality -->
-    <script src="./js/script.js"></script>
+    <script src="./js/dropdown.js"></script>
   </body>
 </html>
